test_apps/test-typechecker/fail/entityderivedproperty.app
application test

section datamodel

  entity User {
    authoredPapers :: String := 1
  }